--- a/package.json
+++ b/package.json
@@ -4,24 +4,39 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build",
+    "build:content": "contentlayer2 build",
+    "build": "contentlayer2 build && next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@iconify/react": "^5.2.1",
+    "@vercel/og": "^0.6.8",
+    "contentlayer2": "^0.5.7",
+    "next": "15.3.0",
+    "next-contentlayer2": "^0.5.7",
+    "next-mdx-remote": "^5.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.3.0"
+    "rehype-pretty-code": "^0.14.1",
+    "rehype-slug": "^6.0.0",
+    "remark-gfm": "^4.0.1",
+    "rss": "^1.2.2",
+    "sanitize-html": "^2.16.0"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4",
+    "@tailwindcss/typography": "^0.5.16",
+    "@types/node": "^20.17.30",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
+    "@types/rss": "^0.0.32",
+    "@types/sanitize-html": "^2.15.0",
     "eslint": "^9",
     "eslint-config-next": "15.3.0",
-    "@eslint/eslintrc": "^3"
+    "prettier-plugin-tailwindcss": "^0.6.11",
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
