--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://amandeeptherockstar.github.io/portfolio",
   "scripts": {
     "dev": "next dev --turbopack",
     "build:content": "contentlayer2 build",
     "build": "contentlayer2 build && next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "@iconify/react": "^5.2.1",
@@ -35,6 +38,7 @@
     "@types/sanitize-html": "^2.15.0",
     "eslint": "^9",
     "eslint-config-next": "15.3.0",
+    "gh-pages": "^6.3.0",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "tailwindcss": "^4",
     "typescript": "^5"
